// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <ForwardRef
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Filter by email, login or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should render pending invites button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <ForwardRef
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Filter by email, login or name"
      value=""
    />
    <div
      style={
        Object {
          "marginLeft": "1rem",
        }
      }
    >
      <button
        className="btn toggle-btn active"
        key="users"
        onClick={[MockFunction]}
      >
        Users
      </button>
      <button
        className="btn toggle-btn"
        key="pending-invites"
        onClick={[MockFunction]}
      >
        Pending Invites (
        5
        )
      </button>
    </div>
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should show external user management button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <ForwardRef
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Filter by email, login or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
    <LinkButton
      href="some/url"
      rel="noopener"
      target="_blank"
      variant="secondary"
    />
  </div>
</div>
`;

exports[`Render should show invite button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <ForwardRef
      inputClassName="gf-form-input width-20"
      labelClassName="gf-form--has-input-icon"
      onChange={[MockFunction]}
      placeholder="Filter by email, login or name"
      value=""
    />
    <div
      className="page-action-bar__spacer"
    />
    <LinkButton
      href="org/users/invite"
      variant="secondary"
    >
      <span>
        Invite
      </span>
    </LinkButton>
  </div>
</div>
`;
